feat: change group config to union semantics and compact Graph log (#87)
Refs: #86